Add HSTS module to configuration for testing.

--- a/framework/src/play-filters-helpers/src/main/resources/reference.conf
+++ b/framework/src/play-filters-helpers/src/main/resources/reference.conf
@@ -4,6 +4,7 @@ play.modules {
   enabled += "play.filters.headers.SecurityHeadersModule"
   enabled += "play.filters.hosts.AllowedHostsModule"
   enabled += "play.filters.gzip.GzipFilterModule"
+  enabled += "play.filters.hsts.HSTSModule"
 }
 
 play.filters {
@@ -94,6 +95,7 @@ play.filters {
 
     # The Content-Security-Policy header. If null, the header is not set.
     contentSecurityPolicy = "default-src 'self'"
+
   }
 
   # Allowed hosts filter configuration
@@ -140,5 +142,11 @@ play.filters {
     # to chunked encoding.
     chunkedThreshold = 100k
 
+  }
+
+  hsts {
+
+    # The Strict-Transport-Security header. If null, the header is not set.
+    strictTransportSecurity = "max-age=31536000; preload"
   }
 }
